1st commit, sprite attack animation (Need to move)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(console_roguelike_cpp)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(console_roguelike_cpp main.cpp)
+add_executable(console_roguelike_cpp main.cpp Utility.cpp Utility.h LevelDesign.cpp LevelDesign.h UserInterface.cpp UserInterface.h AnimationAndSprites.cpp AnimationAndSprites.h)
